Translation added for Users Screen

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -110,6 +110,13 @@
     "email": "Email",
     "roles_userType": "Role/User-Type",
     "joined_organizations": "Joined Organizations",
+    "blocked_organizations": "Blocked Organizations",
+    "orgJoinedBy": "Organizations Joined By",
+    "orgThatBlocked": "Organizations That Blocked",
+    "endOfResults": "End of results",
+    "hasNotJoinedAnyOrg": "has not joined any organization",
+    "isNotBlockedByAnyOrg": "is not blocked by any organization",
+    "searchByOrgName": "Search By Organization Name",
     "view": "View",
     "admin": "ADMIN",
     "superAdmin": "SUPERADMIN",
