--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -106,6 +106,13 @@
     "email": "E-mail",
     "roles_userType": "Rôle/Type d'utilisateur",
     "joined_organizations": "Organisations rejointes",
+    "blocked_organizations": "Organisations bloquées",
+    "endOfResults": "Fin des résultats",
+    "orgJoinedBy": "Organisation rejointe par",
+    "orgThatBlocked": "Organisation bloquée par",
+    "hasNotJoinedAnyOrg": "n'a rejoint aucune organisation",
+    "isNotBlockedByAnyOrg": "n'est bloqué par aucune organisation",
+    "searchByOrgName": "Rechercher par nom d'organisation",
     "view": "Vue",
     "admin": "ADMIN",
     "superAdmin": "SUPERADMIN",
