--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -106,6 +106,13 @@
     "email": "ईमेल",
     "roles_userType": "भूमिका/उपयोगकर्ता-प्रकार",
     "joined_organizations": "संगठनों में शामिल हुए",
+    "blocked_organizations": "अवरोधित संगठन",
+    "endOfResults": "परिणामों का अंत",
+    "orgJoinedBy": "द्वारा शामिल हुए संगठन",
+    "orgThatBlocked": "जिन संगठनों ने अवरोधित किया",
+    "hasNotJoinedAnyOrg": "किसी भी संगठन में शामिल नहीं है",
+    "isNotBlockedByAnyOrg": "किसी भी संगठन द्वारा अवरोधित नहीं है",
+    "searchByOrgName": "संगठन के नाम से खोजें",
     "view": "देखें",
     "admin": "व्यवस्थापक",
     "superAdmin": "सुपरएडमिन",
