--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -106,6 +106,13 @@
     "email": "Correo electrónico",
     "roles_userType": "Rol/Tipo de usuario",
     "joined_organizations": "Organizaciones unidas",
+    "blocked_organizations": "Organizaciones bloqueadas",
+    "endOfResults": "Fin de los resultados",
+    "orgJoinedBy": "Organizaciones unidas por",
+    "orgThatBlocked": "Organizaciones bloqueadas por",
+    "hasNotJoinedAnyOrg": "No se ha unido a ninguna organización.",
+    "isNotBlockedByAnyOrg": "No está bloqueado por ninguna organización.",
+    "searchByOrgName": "Buscar por nombre de organización",
     "view": "Ver",
     "admin": "ADMINISTRACIÓN",
     "superAdmin": "SUPERADMIN",
