--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -106,6 +106,13 @@
     "email": "電子郵件",
     "roles_userType": "角色/用戶類型",
     "joined_organizations": "加入的組織",
+    "blocked_organizations": "阻止的組織",
+    "endOfResults": "結果結束",
+    "orgJoinedBy": "加入組織",
+    "orgThatBlocked": "阻止組織",
+    "hasNotJoinedAnyOrg": "尚未加入任何組織",
+    "isNotBlockedByAnyOrg": "沒有被任何組織阻止",
+    "searchByOrgName": "按組織名稱搜索",
     "view": "視圖",
     "admin": "行政",
     "superAdmin": "超級管理員",
