--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -135,6 +135,7 @@
     "accept": "स्वीकार करना",
     "reject": "अस्वीकार",
     "enterName": "नाम दर्ज करें",
+    "endOfResults": "परिणामों का अंत",
     "loadingRequests": "अनुरोध लोड हो रहा है ...",
     "noRequestFound": "कोई अनुरोध नहीं मिला।",
     "sort": "छांटें",
