--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -135,6 +135,7 @@
     "accept": "接受",
     "reject": "拒絕",
     "enterName": "输入名字",
+    "endOfResults": "結果結束",
     "loadingRequests": "正在加載請求...",
     "noRequestFound": "找不到請求。",
     "sort": "排序",
