Fixed all pending tests

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -166,7 +166,7 @@
     "viewAll": "View All",
     "upcomingEvents": "Upcoming Events",
     "noUpcomingEvents": "No Upcoming Events",
-    "upcomingPosts": "Upcoming Posts",
+    "latestPosts": "Latest Posts",
     "noPostsPresent": "No Posts Present",
     "membershipRequests": "Membership requests",
     "noMembershipRequests": "No Membership requests present",
