--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -160,7 +160,7 @@
     "viewAll": "Voir tout",
     "upcomingEvents": "Événements à venir",
     "noUpcomingEvents": "Aucun événement à venir",
-    "upcomingPosts": "Publications à venir",
+    "latestPosts": "Derniers messages",
     "noPostsPresent": "Aucune publication présente",
     "membershipRequests": "Demandes d'adhésion",
     "noMembershipRequests": "Aucune demande d'adhésion",
