--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -160,7 +160,7 @@
     "viewAll": "सभी देखें",
     "upcomingEvents": "आगामी घटनाएँ",
     "noUpcomingEvents": "कोई आगामी घटनाएँ नहीं",
-    "upcomingPosts": "आगामी पोस्ट",
+    "latestPosts": "नवीनतम पोस्ट",
     "noPostsPresent": "कोई पोस्ट नहीं है",
     "membershipRequests": "सदस्यता अनुरोध",
     "noMembershipRequests": "कोई सदस्यता अनुरोध नहीं",
