--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -160,7 +160,7 @@
     "viewAll": "Ver Todo",
     "upcomingEvents": "Próximos Eventos",
     "noUpcomingEvents": "No Hay Próximos Eventos",
-    "upcomingPosts": "Próximas Publicaciones",
+    "latestPosts": "Últimas Publicaciones",
     "noPostsPresent": "No Hay Publicaciones Presentes",
     "membershipRequests": "Solicitudes de Membresía",
     "noMembershipRequests": "No Hay Solicitudes de Membresía",
