--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -160,7 +160,7 @@
     "viewAll": "查看全部",
     "upcomingEvents": "即将举办的活动",
     "noUpcomingEvents": "没有即将举办的活动",
-    "upcomingPosts": "即将发布的帖子",
+    "latestPosts": "最新帖子",
     "noPostsPresent": "没有帖子",
     "membershipRequests": "会员申请",
     "noMembershipRequests": "没有会员申请",
