--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -390,8 +390,8 @@
   "deleteOrg": {
     "deleteOrganization": "संगठन हटाएं",
     "deleteMsg": "क्या आप इस संगठन को हटाना चाहते हैं?",
-    "no": "नहीं",
-    "yes": "हां",
+    "cancel": "रद्द करना",
+    "confirmDelete": "हटाने की पुष्टि करें",
     "longDelOrgMsg": "संगठन हटाने के बटन पर क्लिक करके, संगठन को स्थायित रूप से हटा दिया जाएगा, साथ ही उसके आयोजन, टैग और सभी संबंधित डेटा भी हटा दिया जाएगा।"
   },
   "userUpdate": {
