--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -394,8 +394,8 @@
   "deleteOrg": {
     "deleteOrganization": "Delete Organization",
     "deleteMsg": "Do you want to delete this organization?",
-    "no": "No",
-    "yes": "Yes",
+    "cancel": "Cancel",
+    "confirmDelete": "Confirm Delete",
     "longDelOrgMsg": "By clicking on Delete organization button you will the organization will be permanently deleted along with its events, tags and all related data."
   },
   "userUpdate": {
