Implemented featurs for Postfeed Management (#982)
* redesigned newsfeed

* added test

* newsfeed management

* pinned post

* postfeed management

* pin unpin tag and video control

* changes part 2

* newsfeed changes

* changes in Card Preview of newsfeed

* changes in Card Preview of newsfeed

* testing phase 1

* translation

* tests

* tests

* merged intto develop

* test

* Added query

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -268,17 +268,25 @@
     "posts": "Posts",
     "createPost": "Create Post",
     "postDetails": "Post Details",
+    "postTitle1": "Write title of the post",
     "postTitle": "Title",
     "information": "Information",
+    "information1": "Write information of the post",
     "image": "Post Image",
-    "video": "Video",
+    "video": "Post Video",
     "addPost": "Add Post",
     "searchTitle": "Search By Title",
     "searchText": "Search By Text",
     "ptitle": "Post Title",
     "postDes": "What do you to talk about?",
     "Title": "Title",
-    "Text": "Text"
+    "Text": "Text",
+    "cancel": "Cancel",
+    "searchBy": "Search By",
+    "Oldest": "Oldest First",
+    "Latest": "Latest First",
+    "sortPost": "Sort Post",
+    "tag": " Your browser does not support the video tag"
   },
   "postNotFound": {
     "post": "Post",
@@ -300,6 +308,7 @@
     "author": "Author",
     "imageURL": "Image URL",
     "videoURL": "Video URL",
+    "edit": "Edit Post",
     "deletePost": "Delete Post",
     "deletePostMsg": "Do you want to remove this post?",
     "no": "No",
@@ -313,6 +322,8 @@
     "updatePost": "Update Post",
     "postDeleted": "Post deleted successfully.",
     "postUpdated": "Post Updated successfully.",
+    "tag": " Your browser does not support the video tag",
+    "pin": "Pin Post",
     "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "blockUnblockUser": {
