--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -257,22 +257,30 @@
     "talawaApiUnavailable": "Le service Talawa-API n'est pas disponible. Est-il en cours d'exécution ? Vérifiez également votre connectivité réseau."
   },
   "orgPost": {
-    "title": "Postes de Talawa",
-    "searchPost": "Rechercher un article",
-    "posts": "Des postes",
-    "createPostnot found": "Créer un article",
+    "title": "Talawa Publications",
+    "searchPost": "Rechercher une publication",
+    "posts": "Publications",
+    "createPost": "Créer une publication",
     "postDetails": "Détails de la publication",
+    "postTitle1": "Écrire le titre de la publication",
     "postTitle": "Titre",
     "information": "Informations",
-    "image": "Image",
-    "video": "Vidéo",
-    "addPost": "Ajouter un article",
+    "information1": "Écrire les informations de la publication",
+    "image": "Image de la publication",
+    "video": "Vidéo de la publication",
+    "addPost": "Ajouter une publication",
     "searchTitle": "Rechercher par titre",
     "searchText": "Rechercher par texte",
-    "ptitle": "Titre de l'article",
-    "postDes": "De quoi parlez-vous ?",
+    "ptitle": "Titre de la publication",
+    "postDes": "De quoi voulez-vous parler?",
     "Title": "Titre",
-    "Text": "Texte"
+    "Text": "Texte",
+    "cancel": "Annuler",
+    "searchBy": "Rechercher par",
+    "Oldest": "Les plus anciennes d'abord",
+    "Latest": "Les plus récentes d'abord",
+    "sortPost": "Trier les publications",
+    "tag": "Votre navigateur ne prend pas en charge la balise vidéo"
   },
   "postNotFound": {
     "post": "Poste",
@@ -294,19 +302,22 @@
     "author": "Auteur",
     "imageURL": "URL de l'image",
     "videoURL": "URL de la vidéo",
-    "deletePost": "Supprimer le message",
-    "deletePostMsg": "Voulez-vous supprimer ce message ?",
+    "edit": "Modifier la publication",
+    "deletePost": "Supprimer la publication",
+    "deletePostMsg": "Voulez-vous supprimer cette publication ?",
     "no": "Non",
     "yes": "Oui",
-    "editPost": "Modifier le message",
+    "editPost": "Modifier la publication",
     "postTitle": "Titre",
     "information": "Informations",
     "image": "Image",
     "video": "Vidéo",
-    "close": "Proche",
-    "updatePost": "Mettre à jour le message",
-    "postDeleted": "Message supprimé avec succès.",
-    "postUpdated": "Message mis à jour avec succès.",
+    "close": "Fermer",
+    "pin": "Épingler la publication",
+    "updatePost": "Mettre à jour la publication",
+    "postDeleted": "Publication supprimée avec succès.",
+    "postUpdated": "Publication mise à jour avec succès.",
+    "tag": "Votre navigateur ne prend pas en charge la balise vidéo",
     "talawaApiUnavailable": "Le service Talawa-API n'est pas disponible. Est-il en cours d'exécution ? Vérifiez également votre connectivité réseau."
   },
   "blockUnblockUser": {
