--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -257,22 +257,30 @@
     "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "orgPost": {
-    "title": "तलावा पोस्ट",
-    "searchPost": "खोज पोस्ट",
-    "posts": "पोस्ट",
-    "createPost": "पोस्ट बनाएं",
+    "title": "तलवा पोस्ट्स",
+    "searchPost": "पोस्ट खोजें",
+    "posts": "पोस्ट्स",
+    "createPost": "पोस्ट बनाएँ",
     "postDetails": "पोस्ट विवरण",
+    "postTitle1": "पोस्ट का शीर्षक लिखें",
     "postTitle": "शीर्षक",
     "information": "जानकारी",
-    "image": "छवि",
-    "video": "वीडियो",
+    "information1": "पोस्ट की जानकारी लिखें",
+    "image": "पोस्ट छवि",
+    "video": "पोस्ट वीडियो",
     "addPost": "पोस्ट जोड़ें",
     "searchTitle": "शीर्षक से खोजें",
-    "searchText": "पाठ द्वारा खोजें",
-    "ptitle": "शीर्षक पोस्ट करें",
-    "postDes": "आपको किस बारे में बात करनी है?",
+    "searchText": "टेक्स्ट से खोजें",
+    "ptitle": "पोस्ट का शीर्षक",
+    "postDes": "आप किस बारे में बात करना चाहते हैं?",
     "Title": "शीर्षक",
-    "Text": "मूलपाठ"
+    "Text": "टेक्स्ट",
+    "cancel": "रद्द करें",
+    "searchBy": "इसके द्वारा खोजें",
+    "Oldest": "सबसे पुराना पहले",
+    "Latest": "सबसे नवीनतम पहले",
+    "sortPost": "पोस्ट को क्रमित करें",
+    "tag": "आपका ब्राउज़र वीडियो टैग का समर्थन नहीं करता"
   },
   "postNotFound": {
     "post": "पोस्ट",
@@ -292,22 +300,25 @@
   },
   "orgPostCard": {
     "author": "लेखक",
-    "imageURL": "छवि यूआरएल",
-    "videoURL": "वीडियो यूआरएल",
-    "deletePost": "पोस्ट को हटाएं",
+    "imageURL": "छवि URL",
+    "videoURL": "वीडियो URL",
+    "edit": "पोस्ट संपादित करें",
+    "deletePost": "पोस्ट हटाएं",
     "deletePostMsg": "क्या आप इस पोस्ट को हटाना चाहते हैं?",
     "no": "नहीं",
     "yes": "हाँ",
-    "editPost": "संपादित पोस्ट",
+    "editPost": "पोस्ट संपादित करें",
     "postTitle": "शीर्षक",
     "information": "जानकारी",
     "image": "छवि",
     "video": "वीडियो",
-    "close": "बंद करना",
-    "updatePost": "अपडेट पोस्ट",
-    "postDeleted": "पोस्ट सफलतापूर्वक हटाई गई।",
-    "postUpdated": "पोस्ट सफलतापूर्वक अपडेट किया गया।",
-    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
+    "close": "बंद करें",
+    "updatePost": "पोस्ट अपडेट करें",
+    "postDeleted": "पोस्ट सफलतापूर्वक हटा दी गई है।",
+    "pin": "पोस्ट पिन करें",
+    "postUpdated": "पोस्ट सफलतापूर्वक अपडेट की गई है।",
+    "tag": "आपका ब्राउज़र वीडियो टैग का समर्थन नहीं करता",
+    "talawaApiUnavailable": "Talawa-API सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जाँचें।"
   },
   "blockUnblockUser": {
     "title": "तलावा ब्लॉक/अनब्लॉक यूजर",
