--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -257,22 +257,30 @@
     "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red."
   },
   "orgPost": {
-    "title": "Puestos Talawa",
-    "searchPost": "Buscar publicación",
+    "title": "Publicaciones de Talawa",
+    "searchPost": "Buscar Publicación",
     "posts": "Publicaciones",
-    "createPost": "Crear publicación",
-    "postDetails": "Detalles de la publicación",
+    "createPost": "Crear Publicación",
+    "postDetails": "Detalles de la Publicación",
+    "postTitle1": "Escribir título de la publicación",
     "postTitle": "Título",
     "information": "Información",
-    "image": "Imagen",
-    "video": "Video",
-    "addPost": "Añadir publicación",
-    "searchTitle": "Buscar por título",
-    "searchText": "Buscar por texto",
-    "ptitle": "Título de la entrada",
-    "postDes": "¿De qué hablar?",
+    "information1": "Escribir información de la publicación",
+    "image": "Imagen de la Publicación",
+    "video": "Video de la Publicación",
+    "addPost": "Agregar Publicación",
+    "searchTitle": "Buscar por Título",
+    "searchText": "Buscar por Texto",
+    "ptitle": "Título de la Publicación",
+    "postDes": "¿De qué quieres hablar?",
     "Title": "Título",
-    "Text": "Texto"
+    "Text": "Texto",
+    "cancel": "Cancelar",
+    "searchBy": "Buscar por",
+    "Oldest": "Más Antiguas Primero",
+    "Latest": "Más Recientes Primero",
+    "sortPost": "Ordenar Publicaciones",
+    "tag": "Su navegador no admite la etiqueta de video"
   },
   "postNotFound": {
     "post": "Publicaciones",
@@ -290,24 +298,27 @@
     "admin not found!": "Administrador no encontrado!",
     "roles not found!": "roles no encontrados!"
   },
+
   "orgPostCard": {
     "author": "Autor",
-    "imageURL": "URL de la imagen",
-    "videoURL": "URL del vídeo",
-    "deletePost": "Eliminar mensaje",
-    "deletePostMsg": "¿Quieres eliminar esta publicación?",
+    "imageURL": "URL de la Imagen",
+    "videoURL": "URL del Video",
+    "edit": "Editar Publicación",
+    "deletePost": "Eliminar Publicación",
+    "deletePostMsg": "¿Desea eliminar esta publicación?",
     "no": "No",
     "yes": "Sí",
-    "editPost": "Editar post",
+    "editPost": "Editar Publicación",
     "postTitle": "Título",
     "information": "Información",
     "image": "Imagen",
     "video": "Video",
-    "close": "Cerca",
-    "updatePost": "Actualizar publicación",
-    "postDeleted": "Publicación eliminada con éxito.",
-    "postUpdated": "Publicación actualizada con éxito.",
-    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red."
+    "close": "Cerrar",
+    "updatePost": "Actualizar Publicación",
+    "postDeleted": "Publicación eliminada exitosamente.",
+    "postUpdated": "Publicación actualizada exitosamente.",
+    "tag": "Su navegador no admite la etiqueta de video",
+    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está en funcionamiento? Compruebe también su conectividad de red."
   },
   "blockUnblockUser": {
     "title": "Usuario de bloqueo/desbloqueo de Talawa",
