--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -257,22 +257,30 @@
     "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
   },
   "orgPost": {
-    "title": "塔拉瓦郵報",
+    "title": "塔拉瓦帖子",
     "searchPost": "搜索帖子",
     "posts": "帖子",
-    "createPost": "創建帖子",
-    "postDetails": "發布詳細信息",
-    "postTitle": "標題",
+    "createPost": "创建帖子",
+    "postDetails": "帖子详情",
+    "postTitle1": "填写帖子标题",
+    "postTitle": "标题",
     "information": "信息",
-    "image": "圖片",
-    "video": "視頻",
+    "information1": "填写帖子信息",
+    "image": "帖子图片",
+    "video": "帖子视频",
     "addPost": "添加帖子",
-    "searchTitle": "按標題搜索",
+    "searchTitle": "按标题搜索",
     "searchText": "按文本搜索",
-    "ptitle": "帖子標題",
-    "postDes": "你要談什麼？",
-    "Title": "標題",
-    "Text": "文本"
+    "ptitle": "帖子标题",
+    "postDes": "您想讨论什么？",
+    "Title": "标题",
+    "Text": "文本",
+    "cancel": "取消",
+    "searchBy": "按方式搜索",
+    "Oldest": "最旧的优先",
+    "Latest": "最新的优先",
+    "sortPost": "排序帖子",
+    "tag": "您的浏览器不支持视频标签"
   },
   "postNotFound": {
     "post": "郵政",
@@ -292,22 +300,25 @@
   },
   "orgPostCard": {
     "author": "作者",
-    "imageURL": "圖片網址",
-    "videoURL": "視頻網址",
-    "deletePost": "刪除帖子",
-    "deletePostMsg": "你想刪除這個帖子嗎？",
-    "no": "不",
-    "yes": "是的",
-    "editPost": "編輯帖子",
-    "postTitle": "標題",
+    "imageURL": "图像链接",
+    "videoURL": "视频链接",
+    "edit": "编辑帖子",
+    "deletePost": "删除帖子",
+    "deletePostMsg": "您确定要删除此帖子吗？",
+    "no": "否",
+    "yes": "是",
+    "editPost": "编辑帖子",
+    "postTitle": "标题",
     "information": "信息",
-    "image": "圖片",
-    "video": "視頻",
-    "close": "關",
+    "image": "图片",
+    "video": "视频",
+    "close": "关闭",
+    "pin": "置顶帖子",
     "updatePost": "更新帖子",
-    "postDeleted": "帖子刪除成功。",
-    "postUpdated": "帖子更新成功。",
-    "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
+    "postDeleted": "帖子成功删除。",
+    "postUpdated": "帖子成功更新。",
+    "tag": "您的浏览器不支持视频标签",
+    "talawaApiUnavailable": "Talawa-API 服务不可用。是否正在运行？还请检查您的网络连接。"
   },
   "blockUnblockUser": {
     "title": "塔拉瓦封鎖/解除封鎖用戶",
