--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -94,7 +94,8 @@
     "noOrgErrorTitle": "संगठन नहीं मिला",
     "sampleOrgDuplicate": "केवल एक नमूना संगठन को अनुमति दी गई",
     "noOrgErrorDescription": "कृपया डैशबोर्ड के माध्यम से एक संगठन बनाएं",
-    "noResultsFoundFor": "के लिए कोई परिणाम नहीं मिला "
+    "noResultsFoundFor": "के लिए कोई परिणाम नहीं मिला ",
+    "OR": "या"
   },
   "orgListCard": {
     "admins": "व्यवस्थापक",
