--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -95,7 +95,8 @@
     "sampleOrgDuplicate": "只允许一个样本组织",
     "noOrgErrorDescription": "请通过仪表板创建一个组织",
     "noResultsFoundFor": "未找到结果 ",
-    "OR": "或者"
+    "OR": "或者",
+    "sampleOrgSuccess": "示例组织成功创建"
   },
   "orgListCard": {
     "admins": "管理員",
