--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -28,6 +28,16 @@
     "login_to_admin_portal": "Admin Portal Login",
     "OR": "OR"
   },
+  "latestEvents": {
+    "eventCardTitle": "Upcoming Events",
+    "eventCardSeeAll": "See All",
+    "noEvents": "No Upcoming Events"
+  },
+  "latestPosts": {
+    "latestPostsTitle": "Latest Posts",
+    "seeAllLink": "See All",
+    "noPostsCreated": "No Posts Created"
+  },
   "listNavbar": {
     "talawa_portal": "Talawa Admin Portal",
     "roles": "Roles",
@@ -75,6 +85,7 @@
     "searchByName": "Search By Name",
     "organizations": "Organizations",
     "createOrganization": "Create Organization",
+    "createSampleOrganization": "Create Sample Organization",
     "description": "Description",
     "location": "Location",
     "isPublic": "Is Public",
@@ -85,18 +96,22 @@
     "filter": "Filter",
     "cancel": "Cancel",
     "noOrgErrorTitle": "Organizations Not Found",
+    "sampleOrgDuplicate": "Only one sample organization allowed",
     "noOrgErrorDescription": "Please create an organization through dashboard",
     "endOfResults": "End of results",
     "manageFeatures": "Manage Features",
     "manageFeaturesInfo": "Creation Successful ! Please select features that you want to enale for this organization from the plugin store.",
     "goToStore": "Go to Plugin Store",
     "enableEverything": "Enable Everything",
-    "noResultsFoundFor": "No results found for "
+    "noResultsFoundFor": "No results found for",
+    "OR": "OR",
+    "sampleOrgSuccess": "Sample Organization Successfully Created"
   },
   "orgListCard": {
     "admins": "Admins",
     "members": "Members",
-    "manage": "Manage"
+    "manage": "Manage",
+    "sampleOrganization": "Sample Organization"
   },
   "paginationList": {
     "rowsPerPage": "rows per page",
@@ -404,6 +419,7 @@
   },
   "deleteOrg": {
     "deleteOrganization": "Delete Organization",
+    "deleteSampleOrganization": "Delete Sample Organization",
     "deleteMsg": "Do you want to delete this organization?",
     "cancel": "Cancel",
     "confirmDelete": "Confirm Delete",
