--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -28,6 +28,11 @@
     "login_to_admin_portal": "Connexion à l'administration du portail",
     "OR": "OU"
   },
+  "latestEvents": {
+    "eventCardTitle": "Événements à venir",
+    "eventCardSeeAll": "Voir Tout",
+    "noEvents": "Aucun événement à venir"
+  },
   "listNavbar": {
     "talawa_portal": "Portail D'Administrateur Talawa",
     "roles": "Les rôles",
@@ -75,6 +80,7 @@
     "searchByName": "Rechercher par nom",
     "organizations": "Organisations",
     "createOrganization": "Créer une organisation",
+    "createSampleOrganization": "Créer une organisation d'exemple",
     "description": "La description",
     "location": "Emplacement",
     "isPublic": "Est publique",
@@ -86,14 +92,19 @@
     "cancel": "Annuler",
     "endOfResults": "Fin des résultats",
     "noOrgErrorTitle": "Organisations non trouvées",
+    "sampleOrgDuplicate": "Seule une organisation d'exemple est autorisée.",
     "noOrgErrorDescription": "Veuillez créer une organisation via le tableau de bord",
-    "noResultsFoundFor": "Aucun résultat trouvé pour "
+    "noResultsFoundFor": "Aucun résultat trouvé pour ",
+    "OR": "OU",
+    "sampleOrgSuccess": "Organisation d'exemple créée avec succès"
   },
   "orgListCard": {
     "admins": "Administrateurs",
     "members": "Membres",
-    "manage": "Faire en sorte"
+    "manage": "Faire en sorte",
+    "sampleOrganization": "Organisation d'exemple"
   },
+
   "paginationList": {
     "rowsPerPage": "lignes par page",
     "all": "Tout"
@@ -400,6 +411,7 @@
   },
   "deleteOrg": {
     "deleteOrganization": "Supprimer l'organisation",
+    "deleteSampleOrganization": "Supprimer l'organisation d'exemple",
     "deleteMsg": "Voulez-vous supprimer cette organisation ?",
     "cancel": "Annuler",
     "confirmDelete": "Confirmer la suppression",
