--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -28,6 +28,11 @@
     "login_to_admin_portal": " 管理员门户登录 ",
     "OR": "或者"
   },
+  "latestEvents": {
+    "eventCardTitle": "即将举行的活动",
+    "eventCardSeeAll": "查看全部",
+    "noEvents": "暂无即将举行的活动"
+  },
   "listNavbar": {
     "talawa_portal": "塔拉瓦管理門戶",
     "roles": "角色",
@@ -75,6 +80,7 @@
     "searchByName": "按名稱搜索",
     "organizations": "组织",
     "createOrganization": "創建組織",
+    "createSampleOrganization": "创建示范组织",
     "description": "描述",
     "location": "地點",
     "isPublic": "是否公開",
@@ -86,13 +92,17 @@
     "cancel": "取消",
     "endOfResults": "結果結束",
     "noOrgErrorTitle": "找不到组织",
+    "sampleOrgDuplicate": "只允许一个样本组织",
     "noOrgErrorDescription": "请通过仪表板创建一个组织",
-    "noResultsFoundFor": "未找到结果 "
+    "noResultsFoundFor": "未找到结果 ",
+    "OR": "或者",
+    "sampleOrgSuccess": "示例组织成功创建"
   },
   "orgListCard": {
     "admins": "管理員",
     "members": "成員",
-    "manage": "管理"
+    "manage": "管理",
+    "sampleOrganization": "示例组织"
   },
   "paginationList": {
     "rowsPerPage": "每頁行數",
@@ -400,6 +410,7 @@
   },
   "deleteOrg": {
     "deleteOrganization": "删除组织",
+    "deleteSampleOrganization": "删除示范组织",
     "deleteMsg": "您是否要删除此组织？",
     "cancel": "取消",
     "confirmDelete": "确认删除",
