feat: Implemented orglist sorting functionality
Changes Made:
- Added a new state variable, `sortingOption`, to manage the current sorting preference. Default is set to 'latest'.
- Introduced a sorting mechanism using the `sortOrgs` function that sorts organizations based on creation date.
- Updated the `useEffect` hook to apply sorting when either `orgsData` or `sortingOption` changes.
- Added two sorting options - latest first and oldest first
- Also added the relevant tests for the correct functionality of the changes.

Fixes issue #1072

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -94,6 +94,8 @@
     "displayImage": "Display Image",
     "enterName": "Enter Name",
     "sort": "Sort",
+    "Latest": "Latest First",
+    "Oldest": "Oldest First",
     "filter": "Filter",
     "cancel": "Cancel",
     "noOrgErrorTitle": "Organizations Not Found",
