feat: Implemented Sorting Functionality for Users Screen
Changes Made:
- Implemented sorting functionality for the users screen.
- Added options for sorting users by latest first and oldest first.
- Wrote corresponding tests to ensure the sorting behavior is accurate.
- Tested the sorting feature by logging into the Talawa admin dashboard,
  navigating to the users option, and checking the sort button.

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -140,6 +140,8 @@
     "loadingUsers": "Loading Users...",
     "noUserFound": "No User Found",
     "sort": "Sort",
+    "Latest": "Latest First",
+    "Oldest": "Oldest First",
     "filter": "Filter",
     "noOrgError": "Organizations not found, please create an organization through dashboard",
     "roleUpdated": "Role Updated.",
